--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css"/>
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css"/>
-    <link rel="stylesheet" href="css/admin-dash.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
     <div class="wrapper">
