Login page unfortunate ADHDism, sidebar added My Profile

--- a/client/index.html
+++ b/client/index.html
@@ -28,9 +28,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a ng-href='#!/profile/{{user.id}}' ng-click="profileCtrl.retrieveUser(user.id)">
                         <i class="glyphicon glyphicon-user"></i>
-                        Manage Clients
+                        My Profile
                     </a>
                 </li>
                 <li>
