--- a/client/index.html
+++ b/client/index.html
@@ -28,15 +28,15 @@
                     </a>
                 </li>
                 <li>
-                    <a ng-href='#!/profile/{{user.id}}' ng-click="profileCtrl.retrieveUser(user.id)">
-                        <i class="glyphicon glyphicon-user"></i>
-                        My Profile
+                    <a href="#">
+                        <i class="glyphicon glyphicon-book"></i>
+                        My Bookings
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="glyphicon glyphicon-magnet"></i>
-                        Settings
+                    <a ng-href='#!/profile/{{user.id}}' ng-click="profileCtrl.retrieveUser(user.id)">
+                        <i class="glyphicon glyphicon-user"></i>
+                        My Profile
                     </a>
                 </li>
                 <li>
