mybookings.html added and linked to sidebar

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a ng-href='#!/bookings'>
                         <i class="glyphicon glyphicon-book"></i>
                         My Bookings
                     </a>
